--- a/wwwroot/solarpanda/index.html
+++ b/wwwroot/solarpanda/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Solar Panda - Low-Cost Home Solar Transforming Lives">
-    <title>Solar Panda - Low-Cost Home Solar</title>
+    <meta name="description" content="Solar King - Low-Cost Home Solar Transforming Lives">
+    <title>Solar King - Low-Cost Home Solar</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -33,10 +33,10 @@
         </div>
     </section>
 
-    <!-- Why Solar Panda Section -->
-    <section id="why-solar-panda" class="section">
+    <!-- Why Solar King Section -->
+    <section id="why-solar-king" class="section">
         <div class="container">
-            <h2>Why Solar Panda?</h2>
+            <h2>Why Solar King?</h2>
             <div class="features-grid">
                 <div class="feature">
                     <h3>Top Quality</h3>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="feature">
                     <h3>Trusted Brand</h3>
-                    <p>Hundreds of thousands of families trust Solar Panda's products and service.</p>
+                    <p>Hundreds of thousands of families trust Solar King's products and service.</p>
                 </div>
                 <div class="feature">
                     <h3>Best Service</h3>
